44530 - FIX - Se corrigen valores de z-index en elementos

--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,7 @@ html {
 #upButton {
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 1;
   right: .5rem;
   bottom: 1.0rem;
   width: 5.5rem;
@@ -192,13 +192,13 @@ header {
   #check:checked ~ .menu {
     top: 0;
     position: fixed;
-    z-index: 1; }
+    z-index: 2; }
   #check:checked + label i {
     background-color: initial; }
   #btn {
     display: initial;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     top: 0;
     right: 3.2rem;
     background-color: #414141;
