--- a/scss/misc/_normalize.scss
+++ b/scss/misc/_normalize.scss
@@ -121,7 +121,7 @@ html {
 #upButton {
     display: none;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
     right: .5rem;
     bottom: 1.0rem;
     width: 5.5rem;
