--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -119,7 +119,7 @@ header {
     #check:checked ~ .menu {
         top: 0;
         position: fixed;
-        z-index: 1;
+        z-index: 2;
     }
 
     #check:checked + label i {
@@ -129,7 +129,7 @@ header {
     #btn {
         display: initial;
         position: fixed;
-        z-index: 2;
+        z-index: 3;
         top: 0;
         right: $spacing-md;
         background-color: $background-header-footer;
